# cdson

./: README.md  cdson.c  cdson.h  meson.build
.github/workflows/: ci.yml
src/: allocation.h  dump.c  fetch.c  parse.c  sniff.c  unicode.c  unicode.h
tests/: buildtest.c  dumpbase.c  errors.c  escapes.c  fetching.c  specparse.c  testprog.c
